name:                dandelion
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Johan Liesén
maintainer:          johan@liesen.se
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  .gitignore
  README.md

executable dandelion
  main-is:             Main.hs
  build-depends:
    base >=4.7 && <5,
    colour,
    data-default-class,
    diagrams ==1.2.*,
    diagrams-cairo,
    diagrams-contrib,
    diagrams-core,
    diagrams-lib,
    diagrams-svg,
    lens >=4,
    random
  hs-source-dirs:      src
  default-language:    Haskell2010
